ops/envoy/envoy-xds-dev.yaml
node:
  cluster: wafie-gateway-1
  id: node-1
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
dynamic_resources:
  ads_config:
    api_type: GRPC
    transport_api_version: V3
    grpc_services:
      - envoy_grpc:
          cluster_name: wafie_xds_gateway
static_resources:
  listeners:
    - name: readiness_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: readiness_check
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: readiness_host
                    domains: ["*"]
                    routes:
                      - match:
                          path: "/ready"
                        route:
                          cluster: internal_admin
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 403
                          body:
                            inline_string: "nope"
                http_filters:
                  - name: envoy.filters.http.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: true
                      headers:
                        - name: ":path"
                          string_match:
                            exact: "/ready"
                      cluster_min_healthy_percentages:
                        external_service_cluster_name:
                          value: 1
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: wafie_xds_gateway
      type: STRICT_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: wafie_xds_gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 18000
    - name: internal_admin
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
      load_assignment:
        cluster_name: internal_admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9901
